--- a/midterm.css
+++ b/midterm.css
@@ -2,6 +2,7 @@
     position:relative;
     background-color:rgb(181, 190, 192);
     height:auto;
+    margin: 0 auto;
     width: 750px;
     word-wrap: break-word;
     white-space:pre-wrap;
@@ -15,10 +16,22 @@ a{
 }
 h1{
     color:rgb(5, 3, 3);
+text-align:center;
 }
 p{
     font-family: 'Times New Roman', Times, serif;
 }
 img{
     float:none;
+}
+#list {
+     text-align: center; 
+    }
+li{ 
+    display: inline;
+    font-size: larger;
+}
+p.rag{
+    color: white;
+    
 }
